# src/database/entity/car.entity.ts
@@ -2,15 +2,15 @@ import {
     Entity,
     PrimaryGeneratedColumn,
     Column,
-    OneToMany, ManyToOne
+    OneToMany,
+    ManyToOne
 } from 'typeorm';
-import { MileageEntry } from './mileage-entry.entity';
-import { FullTankEntry } from './full-tank-entry.entity';
-import { SpendingEntry } from './spending-entry.entity';
 import { Part } from './part.entity';
-import {ColumnImageTransformer} from "../transformer/ColumnImageTransformer";
-import {User} from "./user.entity";
-import {AutoDocEntity} from "../../decorators/auto-doc-entity";
+import { MileageEntry } from './mileage-entry.entity';
+import { SpendingEntry } from './spending-entry.entity';
+import { ColumnImageTransformer } from "../transformer/ColumnImageTransformer";
+import { User } from "./user.entity";
+import { AutoDocEntity } from "../../decorators/auto-doc-entity";
 
 @Entity()
 @AutoDocEntity()
@@ -22,13 +22,13 @@ export class Car {
     name: string;
 
     @Column()
-    fabricant: string;
+    brand: string;
 
     @Column()
     model: string;
 
     @Column({ nullable: true, transformer: new ColumnImageTransformer() })
-    imageLink: string;
+    imageUrl: string;
 
     @Column({ type: 'bigint' })
     mileageAtStart: number;
@@ -48,25 +48,20 @@ export class Car {
     @Column({ nullable: true })
     deletedAt: string;
 
+    @OneToMany(() => Part, part => part.car, {
+        cascade: true
+    })
+    parts: Part[];
+
     @OneToMany(() => MileageEntry, mileage => mileage.car, {
         cascade: true
     })
     mileages: MileageEntry[];
 
-    @OneToMany(() => FullTankEntry, fullTank => fullTank.car, {
-        cascade: true
-    })
-    fullTanks: FullTankEntry[];
-
     @OneToMany(() => SpendingEntry, spending => spending.car, {
         cascade: true
     })
     spendings: SpendingEntry[];
-
-    @OneToMany(() => Part, part => part.car, {
-        cascade: true
-    })
-    parts: Part[];
 
     @ManyToOne(() => User, (user) => user.cars)
     user: User;
